--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,11 @@ body {
     background-color: #ffe4d5c5;
 }
 
-/* Media query para dispositivos con un ancho máximo de 768px (pantallas de celular) */
-@media only screen and (max-width: 768px) {
-    html {
-        font-size: 38.5%;
-    }
-}
-
 /* Inicio - estilos para el marco de presentación */
 
 .marco-presentation {
     position: fixed;
-    background-image: linear-gradient(to bottom right, #ff853e 60%, #ffffff00 100%);
+    background-image: linear-gradient(to bottom right, #ff853e 60%, #ffffff 100%);
     opacity: 1;
     transition: opacity 1s ease;
 }
@@ -83,6 +76,8 @@ body {
 
 /* Estilos para la barra de navegación */
 .navegation {
+    display: flex;
+    justify-content: center;
     background-color: #ffffff30;
     margin: 5vh 10vw 0vh 10vw;
     height: 5rem;
@@ -93,6 +88,7 @@ body {
 
 .navegation ul {
     display: flex;
+    align-items: center;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -101,4 +97,64 @@ body {
 
 .navegation a {
     text-decoration: none;
+    color: #000;
+    margin: 0 1.5rem;
+}
+
+.navegation a:hover {
+    color: #ff853e;
+}
+
+main {
+    /* background-color: #ffffff30; */
+    margin: 5vh 4vw 0vh 4vw;
+    border: 0.1rem solid #000;
+    border-radius: 2rem;
+}
+
+main .content {
+    /* background-color: #ffffff30; */
+    margin: 2vh 2vw 2vh 2vw;
+    border: 0.1rem solid #000;
+    /* border-radius: 2rem; */
+    display: flex;
+}
+
+main .rostro {
+    display: inline-block;
+    border: 0.1rem solid #000;
+    border-radius: 10rem;
+    width: 15.7vw;
+    height: 32vh;
+    background-image: url("/img/rostro.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+main .presentation {
+    /* background-color: red; */
+    display: inline-block;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    width: 70vw;
+    height: 32vh;
+}
+
+/* Media query para dispositivos con un ancho máximo de 768px (pantallas de celular) */
+@media only screen and (max-width: 768px) {
+
+    html {
+        font-size: 38.5%;
+    }
+    
+    .navegation a {
+        font-size: 1.5rem;
+        margin: 0 .5rem;
+    }
+
+    main .rostro {
+        width: 24vw;
+        height: 16vh;
+    }
+
 }
