--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ main .content {
 main .rostro {
     background-image: url("/img/rostro.png");
     background-size: contain;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     background-position: center;
     max-width: 100%;
     border: 0.1rem solid #000;
@@ -146,6 +146,41 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
+}
+
+/* Estilos para experiencia */
+.content-experience {
+    background-color: #ff995e;
+    margin: 1rem 2rem;
+    padding: 1rem;
+    text-align: center;
+    border: 0.1rem solid #000;
+    border-radius: 2rem;
+    cursor: pointer;
+}
+
+.experiences .content-experience:hover {
+    background-color: #ff853e;
+}
+
+.entity-name::after {
+    content: "+";
+    position: absolute;
+    font-size: 2.5rem;
+    right: 10rem;
+}
+
+.content-experience .role {
+    font-weight: bold;
+}
+
+
+.content-experience .entity-name {
+    font-size: 1.8rem;
+}
+
+.content-experience .working-time {
+    font-size: 1.8rem;
 }
 
 /* Media query para dispositivos con un ancho máximo de 768px (pantallas de celular) */
