--- a/css/style-projects.css
+++ b/css/style-projects.css
@@ -27,6 +27,10 @@
     height: 35%;
 }
 
+.project-p:hover {
+    background-color: #ff853e;
+}
+
 .technologies {
     /* margin-top: 3rem; */
     display: grid;
