--- a/css/style-project.css
+++ b/css/style-project.css
@@ -15,16 +15,23 @@ main {
 
 .project-image {
     /* background-color: aqua; */
-    height: 35vh;
     grid-column: 1/5;
     /* height: 40px; */
     padding: 1rem;
-    background-image: url("/img/projects_images/spt_3.png");
-    background-size: contain;
+    /* background-image: url("/img/projects_images/spt_3.png"); */
+    /* background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    max-width: 100%;
+    max-width: 100%; */
     /* border: 0.5rem solid #e8d2c6c5; */
+}
+
+.project-image img {
+    max-width: 100%;
+    height: 35vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .project-introduction {
@@ -96,6 +103,16 @@ h2 {
 .images-videos iframe {
     height: 80%;
     width: 80%;
+    max-width: 100%;
+    /* margin: 1rem; */
+    border: .3rem solid #e8d2c6c5;
+    margin: auto;
+}
+
+.project-image iframe {
+    height: 35vh;
+    width: 45vw;
+    display: block;
     max-width: 100%;
     /* margin: 1rem; */
     border: .3rem solid #e8d2c6c5;
