--- a/styles/experience.css
+++ b/styles/experience.css
@@ -1,3 +1,20 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
 h4,
 h3 {
     margin: 0;
@@ -38,4 +55,11 @@ h3 {
 
 .invisible {
     overflow: hidden;
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+    .experience {
+        width: 95%;
+    }
 }
